--- a/dev-apps/dev-app/src/app/login/login.component.scss
+++ b/dev-apps/dev-app/src/app/login/login.component.scss
@@ -35,3 +35,15 @@
     flex: 1 1 0%;
   }
 }
+
+.footer {
+  .error-wrapper {
+    min-height: 1rem;
+    margin-bottom: 0.5rem;
+
+    .error {
+      font-size: 0.75rem;
+      color: red;
+    }
+  }
+}
