feat(ark): 🎸 modular store class, state providers

--- a/dev-apps/dev-app/src/app/login/login.component.html
+++ b/dev-apps/dev-app/src/app/login/login.component.html
@@ -7,6 +7,7 @@
         type="text"
         name="username"
         id="username"
+        autocomplete="username"
         placeholder="Username"
         formControlName="username"
       />
@@ -17,6 +18,7 @@
         type="password"
         name="password"
         id="password"
+        autocomplete="current-password"
         placeholder="Password"
         formControlName="password"
       />
