--- a/dev-apps/dev-app/src/app/main-layout/main-layout.component.html
+++ b/dev-apps/dev-app/src/app/main-layout/main-layout.component.html
@@ -1,1 +1,10 @@
+<header class="main-header">
+  <div class="logo">Ark</div>
+  <div class="spacer"></div>
+  <button (click)="logout()">Logout</button>
+  <div class="user-avatar" *ngIf="session.user$ | async as user">
+    {{ user.username.slice(0, 1).toUpperCase() }}
+    <span class="user-name tooltip">{{ user?.username }}</span>
+  </div>
+</header>
 <p>main-layout works!</p>
