--- a/dev-apps/dev-app/src/app/main-layout/main-layout.component.scss
+++ b/dev-apps/dev-app/src/app/main-layout/main-layout.component.scss
@@ -1,3 +1,9 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
 .tooltip {
   display: flex;
   visibility: hidden;
@@ -21,10 +27,17 @@
   width: 100%;
   min-height: 4rem;
   padding: 0 1rem;
-  border-bottom: 1px solid #555;
+  box-shadow: 0 3px 5px -1px #0003, 0 6px 10px #00000024, 0 1px 18px #0000001f;
 
   .logo {
     margin-right: 1rem;
+  }
+
+  .links {
+    a {
+      margin-right: 0.5rem;
+      font-size: 0.75rem;
+    }
   }
 
   .user-avatar {
@@ -48,5 +61,8 @@
 }
 
 main {
-  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 0%;
+  overflow-y: auto;
 }
