--- a/dev-apps/dev-app/src/styles.scss
+++ b/dev-apps/dev-app/src/styles.scss
@@ -13,9 +13,16 @@ html {
 
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  background-color: #fafafa;
 }
 
 .spacer {
   flex: 1 1 0%;
+}
+
+.form-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
 }
