feat(ark): 🎸 complete remastering
Removed providers, implemented own state updating engine, separated rxjs
part, separated angular part, added hooks, extenders and modifiers

--- a/dev-apps/dev-app/src/app/main-layout/main-layout.component.html
+++ b/dev-apps/dev-app/src/app/main-layout/main-layout.component.html
@@ -6,7 +6,8 @@
     <a routerLink="/async-demo">Async Demo</a>
     <a routerLink="/connect-demo">Connect Demo</a>
     <a routerLink="/effect-demo">Effect Demo</a>
-    <a routerLink="/books-demo">Books Demo</a>
+    <a routerLink="/books/books-reactive">Books RX</a>
+    <a routerLink="/books/books-declarative">Books Dec</a>
   </div>
   <div class="spacer"></div>
   <button (click)="logout()">Logout</button>
